--- a/index.org
+++ b/index.org
@@ -177,7 +177,7 @@ If you want to add in new rooms:
  4. Save
  5. Run C-c C-c on the Begin block below
 
-#+BEGIN: columnview :skip-empty-rows t :id file:rooms.org 
+#+BEGIN: columnview :skip-empty-rows t :id "909d5b16-7f7f-44a4-94dd-725d716badb8909d5b16-7f7f-44a4-94dd-725d716badb8"
 #+name: room-table
 | ITEM                     | SHAPE                      | FLOORS   |
 |--------------------------+----------------------------+----------|
@@ -249,17 +249,25 @@ Please note that these are the inital states of each room object, so it does not
           if randomize:
               random.shuffle(self.LIST)
 
-      def roomize(self,room):
-          "Converts room specs into an actual room object"
-          if type(room) == str:
-              return Room(
-                  room[0],
-                  eval(room[1]),
-                  eval(room[2]))
-          elif str(type(room)) == "<class 'traitor.house.Room'>":
+      def roomize(self, room):
+          """Takes either a room object and passes it to the list, or a list with the room specs and turns it into a room"""
+          input_type = str(type(room))
+          if input_type == "<class 'list'>":
+              # Add in some sanitizers later
+              try:
+                  output = Room(
+                      name=room[0],
+                      shape=eval(room[1]),
+                      allowed_floors = eval(room[2]))
+                  return output
+              except TypeError:
+                  raise ValueError("The room string is malformed")
+
+          elif input_type == "<class 'traitor.house.Room'>":
               return room
           else:
-              raise TypeError("Error something non roomlike was supplied")
+              raise TypeError("{0} was given, expecting a list or a room".format(input_type))
+
 
 
 
@@ -575,68 +583,31 @@ If the newly discoved room has an event in it, the player must stop moving and a
 
 #+name: house_discover
 #+BEGIN_SRC python
-  def discover(
-          coordnate,
-          direction,
-          MAP=None,
-          ROOM_LIST=None):
-
-      """Spawns a room if possible, then sets everything up"""
-      if placeable_room_exists(coordnate,ROOM_LIST):
-          discarded_rooms = []
-          Run = True
-          while Run:
-              drawn_room = ROOM_LIST.draw_room()
-              if can_place_room(coordnate,drawn_room):
-                  MAP.spawn_room(coordnate,drawn_room)
-                  MAP.MAP[coordnate].set_coordnate(coordnate)
-                  r = set_rotation(drawn_room,direction)
-                  MAP.MAP[coordnate].set_edges(r)
-                  Run = False
-              else:
-                  discarded_rooms.append(drawn_room)
-          if discarded_rooms != []:
-              ROOM_LIST.add_room(*discarded_rooms,randomize=True)
-
-          return None
-
-      else:
-          raise IndexError('No Placeable rooms on this floor!') #Replace with custom exception later
 
   def placeable_room_exists(coordnate,ROOM_LIST=None):
       return True in [coordnate[2] in room.allowed_floors for room in ROOM_LIST.LIST]
 
-  def set_rotation(room,direction):
-      #Will rotate the room so one enabled edge is faceing the room that lead to it.
-      #consider making the opposite table in the document
-      cardinal_directions = ('north','east','south','west',)
-      opposite_edges = {'north': 'south',
-			'east': 'west',
-			'south': 'north',
-			'west': 'east'}
-      allowed_rotation = []
-      shape = room.shape
-      for rotation in range(4): #anything more is redundant
-          direction_wheel = itertools.cycle(cardinal_directions)
-          test_rotation = {}
-          for n in range(rotation): #spin the wheel
-              direction_wheel.__next__()
-              continue
-          for edge in shape:
-              test_rotation[direction_wheel.__next__()] = edge
-          if test_rotation[
-                  opposite_edges[direction]] == True:
-              allowed_rotation.append(rotation)
-          else:
-              pass
-      return allowed_rotation[0] #replace with prompt for user input
-        
-
-        
-        
-
   def can_place_room(coordnate,room):
       return coordnate[2] in room.allowed_floors
+
+  def search_for_room(coordnate, ROOM_LIST):
+      # Check to make sure that this is possible
+      if not placeable_room_exists(coordnate):
+          raise IndexError("No rooms can be placed on this floor")
+
+      stack = []
+      run = True
+
+      while run:
+          drawn_room = ROOM_LIST.draw_room()
+          if can_place_room(coordnate,drawn_room):
+              # Do nothing allow for the room to be placed 
+              break
+          else:
+              stack.append(drawn_room)
+
+      ROOM_LIST.add_room(*stack, randomize=True)
+      return drawn_room
 #+END_SRC
 
 ** Tests
@@ -686,14 +657,26 @@ If the newly discoved room has an event in it, the player must stop moving and a
   <<house_test_imports>>
 
   class RoomListTests(unittest.TestCase):
-      def setUp(self):
-          self.RoomList = house.RoomList(roomlist)
-        
-      def test_room_list_has_rooms(self):
+
+      def test_fill_roomlist(self):
+          ROOMLIST = house.RoomList(roomlist)
           self.assertNotEqual(
-              self.RoomList.LIST, [],
-              "It seems that the roomlist was not properly filled :/"
-          )
+              ROOMLIST.LIST, []
+              )
+
+      def test_can_roomize(self):
+          ROOMLIST = house.RoomList([["test", "(None,None,None,None)", "(None,None,None,None)"]])
+          self.assertEqual(
+              str(type(ROOMLIST.LIST[0])), "<class 'traitor.house.Room'>")
+
+      def test_wont_roomize_garbage(self):
+          ROOMLIST = house.RoomList([])
+          with self.assertRaises(TypeError) as cm:
+              ROOMLIST.roomize(1)
+
+
+
+
 
 #+END_SRC
 *** Room Tests
@@ -809,10 +792,9 @@ If the newly discoved room has an event in it, the player must stop moving and a
 * TODO Events
 * TODO Omens
 * TODO Haunts
-** Haunt Table
-:PROPERTIES:
-:COLUMNS: %ITEM %OMEN %ROOM
-:END: 
+#+BEGIN: columnview :skip-empty-rows t :id file:haunts.org
+
+#+END:
 * TODO Engine
 We start putting things together here in the engine
 #+BEGIN_SRC python :tangle traitor/main.py :noweb yes  :shebang #!/usr/bin/env python3
