--- a/index.org
+++ b/index.org
@@ -177,12 +177,8 @@ If you want to add in new rooms:
  4. Save
  5. Run C-c C-c on the Begin block below
 
-<<<<<<< HEAD
-#+BEGIN: columnview :skip-empty-rows t :id file:rooms.org
-=======
 #+BEGIN: columnview :skip-empty-rows t :id "909d5b16-7f7f-44a4-94dd-725d716badb8909d5b16-7f7f-44a4-94dd-725d716badb8"
 #+name: room-table
->>>>>>> 81a5199a8f5065681f08b012fc5354270f470b98
 | ITEM                     | SHAPE                      | FLOORS   |
 |--------------------------+----------------------------+----------|
 | Wine Cellar              | (True,False,True,False)    | (-1,)    |
@@ -239,7 +235,6 @@ Please note that these are the inital states of each room object, so it does not
  + Coordnates
  + Contents
  + Rotation
-
 
 
 ** Room List Object
@@ -598,7 +593,7 @@ If the newly discoved room has an event in it, the player must stop moving and a
 
   def search_for_room(coordnate, ROOM_LIST):
       # Check to make sure that this is possible
-      if not placeable_room_exists(coordnate):
+      if not placeable_room_exists(coordnate, ROOM_LIST):
           raise IndexError("No rooms can be placed on this floor")
 
       stack = []
@@ -618,7 +613,34 @@ If the newly discoved room has an event in it, the player must stop moving and a
   def rotate_room(room,direction):
       # Gets a list of all vaild room rotations
       # Then calls for user input or the first member
-      pass
+      cardinal_directions = ('north','east','south','west')
+      edge_table = {
+          'north': 'south',
+          'south': 'north',
+          'east': 'west',
+          'west': 'east'}
+
+      # A circular list containing the cardinal directions
+      # The wheel "spins" to provide a rotation number
+      # Then the number is fed to the room during assignment
+      allowed_rotations = []
+      for r in range(4):
+          direction_wheel = itertools.cycle(cardinal_directions)
+          for n in range(int(r)):
+              direction_wheel.__next__()
+              continue
+
+          zipped = zip(direction_wheel,room.shape)
+          for z in zipped:
+              if z[0] == edge_table[direction] & z[1] == True:
+                  allowed_rotations.append(r)
+              else:
+                  continue
+
+      return allowed_rotations
+
+
+
 #+END_SRC
 
 ** Tests
@@ -648,7 +670,7 @@ If the newly discoved room has an event in it, the player must stop moving and a
       def test_placeable_room_exists(self):
           ROOM_LIST = house.RoomList([]) #Empty
           self.assertFalse(house.placeable_room_exists((0,0,0),ROOM_LIST))
-          ROOM_LIST.add_room(house.Room("Test",(False,False,False,False),(0)))
+          ROOM_LIST.add_room(house.Room("Test",(False,False,False,False),(0,)))
           self.assertTrue(house.placeable_room_exists((0,0,0),ROOM_LIST))
 
       def test_can_place_room(self):
@@ -665,7 +687,7 @@ If the newly discoved room has an event in it, the player must stop moving and a
           ROOM_LIST = house.RoomList([])
           with self.assertRaises(IndexError) as cm:
               house.search_for_room((0,0,0),ROOM_LIST)
-        
+
 
 #+END_SRC
 
