--- a/index.org
+++ b/index.org
@@ -883,7 +883,7 @@ If the newly discoved room has an event in it, the player must stop moving and a
           self.assertEqual(self.MAP[(1,0,0)], discovered_room)
 #+END_SRC
 
-* Cards
+* TODO Cards
 ** Deck Object
 These decks all behave the same therfore instead of writing a unique object for each of them,
 I will instead be consolidating them into a single Deck object. One for omens, one for items, one for events.
@@ -894,22 +894,67 @@ Potentally I may re write the RoomList into this class as well.
       def __init__(self, _list):
           self._list = _list
           return None
-        
+
       def __repr__(self):
           return "Deck({0})".format(self._list)
 
       def __getitem__(self,position):
-          return self._list[position])
+          return self._list[position]
 
       def __setitem__(self,position,value):
           self._list[position] = value
           return None
+
+      def append(self,value):
+          self._list.append(value)
+          return None
+
     
+
 #+END_SRC
 
 ** TODO Items
 ** TODO Events
 ** TODO Omens
+** Tests
+#+BEGIN_SRC python :tangle tests/test_Deck_object.py :noweb yes 
+  import unittest
+
+  <<Deck_Object>>
+
+  class DeckUnitTests(unittest.TestCase):
+
+      def test_can_make_deck(self):
+          test = Deck([])
+          self.assertIsInstance(test,Deck)
+
+      def test_decks_are_indexable(self):
+          test = Deck([1,2,3])
+          self.assertEqual(test[0], 1)
+
+      def test_decks_can_be_appended(self):
+          test = Deck([1,2,3])
+          test.append(4)
+          self.assertEqual(test[3],4)
+
+      def test_decks_can_be_changed(self):
+          test = Deck([1])
+          test[0] = 'a'
+          self.assertEqual(test[0], 'a')
+
+      def test_decks_are_syntactically_symmetrical(self):
+          test1 = Deck([1,2,3])
+          r = repr(test1)
+          test2 = eval(r)
+          self.assertEqual(test1._list,test2._list)
+
+      def test_decks_are_iterable(self):
+          test = Deck([1,2,3])
+          for i in test:
+              self.assertEqual(i, test[i-1])
+            
+#+END_SRC
+
 * TODO Haunts
 #+BEGIN: columnview :skip-empty-rows t :id file:haunts.org
 
