--- a/index.org
+++ b/index.org
@@ -895,6 +895,9 @@ Potentally I may re write the RoomList into this class as well.
           self._list = _list
           return None
 
+      def __len__(self):
+          return len(self._list)
+
       def __repr__(self):
           return "Deck({0})".format(self._list)
 
@@ -909,7 +912,10 @@ Potentally I may re write the RoomList into this class as well.
           self._list.append(value)
           return None
 
-    
+      def pop(self):
+          return self._list.pop()
+
+
 
 #+END_SRC
 
@@ -952,7 +958,14 @@ Potentally I may re write the RoomList into this class as well.
           test = Deck([1,2,3])
           for i in test:
               self.assertEqual(i, test[i-1])
-            
+
+      def test_decks_can_be_popped(self):
+          test = Deck([1,2,3])
+          v = test.pop()
+          self.assertEqual(v, 3)
+          self.assertEqual(len(test),2)
+        
+
 #+END_SRC
 
 * TODO Haunts
